# viz3

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md  april_tag_pipeline.py  image_pipeline.py
examples/plugins/: example_plugin.py
src/: delta_v_main.py
src/object_pipelines/: __init__.py  april_tag_pipeline.py  image_pipeline.py  pipeline.py
src/render/: axes.py  custom_lowlevel_rendering.py  user.py  world.py
src/render/objects/: apriltag.py  image_object.py
src/viz3/: __init__.py  config_parser.py  main.py  util.py  viz3.py
src/viz3/object_pipeline/: __init__.py  pipeline.py  plugin_manager.py
src/viz3/render/: __init__.py  axes.py  cube_point_cloud.py  ground.py  world.py
src/viz3/render/objects/: __init__.py  image_object.py
